# astrolabe

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
astrolabe/: config.py  config.toml  errors.py
astrolabe/camera/: __init__.py  base.py  indi.py
astrolabe/cli/: commands.py  main.py
astrolabe/indi/: __init__.py  client.py
astrolabe/mount/: __init__.py  base.py  indi.py
astrolabe/planner/: __init__.py  astro.py  filters.py  formatters.py  planner.py  scoring.py  types.py  update.py  visibility.py
astrolabe/planner/providers/: __init__.py  base.py  catalog.py  messier.py  solar_system.py  southern_highlights.py
astrolabe/services/: __init__.py  alignment.py  goto.py  guide.py  pointing.py  polar.py
astrolabe/services/polar/: __init__.py  math.py  service.py  types.py
astrolabe/solver/: __init__.py  astap.py  base.py  types.py
astrolabe/util/: __init__.py  format.py
data/: bayer_flamsteed.csv  caldwell.csv  catalog_curated.csv  hip_subset.csv  star_aliases.csv
docs/: architecture.md  cli.md  conventions.md  interfaces.md  vision.md
docs/dev/: plan_indi.md  plan_indi_snapshot.md  plan_integration_container.md  plan_mount_indi_slew.md  plan_pointing.md  plan_pointing_error_model.md  plan_pointing_tests.md  plan_service_polar.md
scripts/: gen_caldwell_csv.py  gen_catalog_starfield.py  gen_sim_fits.py  install-tycho2.sh  integration-entrypoint.sh  setup_indi_simulators.sh
scripts/catalog/: build_bayer_flamsteed.py  build_hip_subset.py
scripts/dev/: pr_comments.sh
testdata/: README.md
tests/: conftest.py  test_planner_smoke.py
tests/camera/: test_indi_camera.py
tests/cli/: test_resolve.py
tests/config/: test_config.py
tests/indi/: test_client.py
tests/mount/: test_indi_mount.py
tests/services/: test_pointing_service.py
tests/services/polar/: test_cli.py  test_math.py  test_service.py
tests/solver/: test_astap.py
tests/util/: test_format.py
